update api documentation
