# swagger-output.json
@@ -39,6 +39,89 @@
     "application/json"
   ],
   "paths": {
+
+    "/auth/signup": {
+      "post": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "Endpoint to register",
+        "produces": [
+          "application/xml"
+        ],
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "User information.",
+            "required": true,
+            "schema": {
+              "type":"object",
+              "require":["username","email","password"],
+              "properties":{
+                "username":{
+                  "type":"string"
+                },
+                "email":{
+                  "type":"string"
+                },
+                "password":{
+                  "type":"string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "User registered successfully."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/signin": {
+      "post": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "Endpoint to login",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "User information to login.",
+            "required": true,
+            "schema": {
+              "type":"object",
+              "require":["username","password"],
+              "properties":{
+                "username":{
+                  "type":"string"
+                },
+                "password":{
+                  "type":"string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User Login successfully.",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        }
+      }
+    },
+
     "/users": {
       "get": {
         "tags": [
@@ -351,87 +434,8 @@
         ]
       }
     },
-    "/auth/signup": {
-      "post": {
-        "tags": [
-          "Authentication"
-        ],
-        "description": "Endpoint to register",
-        "produces": [
-          "application/xml"
-        ],
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "User information.",
-            "required": true,
-            "schema": {
-              "type":"object",
-              "require":["username","email","password"],
-              "properties":{
-                "username":{
-                  "type":"string"
-                },
-                "email":{
-                  "type":"string"
-                },
-                "password":{
-                  "type":"string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "User registered successfully."
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/auth/signin": {
-      "post": {
-        "tags": [
-          "Authentication"
-        ],
-        "description": "Endpoint to login",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "User information to login.",
-            "required": true,
-            "schema": {
-              "type":"object",
-              "require":["username","password"],
-              "properties":{
-                "username":{
-                  "type":"string"
-                },
-                "password":{
-                  "type":"string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "User Login successfully.",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          }
-        }
-      }
-    },
+
+
     "/account/forgotpass": {
       "get": {
         "tags": [
@@ -536,6 +540,8 @@
         }
       }
     },
+
+
     "/products/search": {
       "get": {
         "tags": [
@@ -758,6 +764,8 @@
         }
       }
     },
+
+
     "/carts/{idUser}": {
       "post": {
         "tags": [
@@ -866,6 +874,8 @@
         }
       }
     },
+
+
     "/categories": {
       "post": {
         "tags": [
@@ -1010,6 +1020,171 @@
         "responses": {
           "200": {
             "description": "Update category successfully!"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+
+    "/orders": {
+      "get": {
+        "tags": [
+          "Order"
+        ],
+        "description": "Get all order by admin",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "access token",
+            "in": "header",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get order successfully!"
+          },
+          "404": {
+            "description": "Not found order!"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/orders/{userId}": {
+      "get": {
+        "tags": [
+          "Order"
+        ],
+        "description": "Get all order by user",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "access token",
+            "in": "header",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "User ID",
+            "in": "path",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get order successfully!"
+          },
+          "404": {
+            "description": "Not found order!"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+
+    "/orderDetail/{userId}": {
+      "get": {
+        "tags": [
+          "Order Detail"
+        ],
+        "description": "Get all order detail by user",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "access token",
+            "in": "header",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "User ID",
+            "in": "path",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get order successfully!"
+          },
+          "404": {
+            "description": "Not found order!"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+
+    "/payments": {
+      "post": {
+        "tags": [
+          "Payment"
+        ],
+        "description": "Create payment",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "access token",
+            "in": "header",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK!"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/payments/{orderId}": {
+      "post": {
+        "tags": [
+          "Payment"
+        ],
+        "description": "Get payment by order ID",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "access token",
+            "in": "header",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "Order ID",
+            "in": "path",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK!"
           },
           "500": {
             "description": "Internal Server Error"
